hphp/test/zend/good/ext/pdo_mysql/tests/pdo_mysql_connect_charset.php.skipif
<?php

if (!extension_loaded("mysql")) exit("skip mysql extension not loaded");

if (false === getenv('PDO_MYSQL_TEST_DSN')) exit("skip PDO_MYSQL_TEST_DSN env variable is not defined");
if (false === getenv('PDO_MYSQL_TEST_USER')) exit("skip PDO_MYSQL_TEST_USER env variable is not defined");
if (false === getenv('PDO_MYSQL_TEST_PASS')) exit("skip PDO_MYSQL_TEST_PASS env variable is not defined");
